Update the 'lkql_jit/README.md' file